Update resume with personal information

--- a/resume.tex
+++ b/resume.tex
@@ -145,12 +145,12 @@
     % #5: Email, #6: Website, #7: GitHub, #8: LinkedIn, #9: Photo path
     
     \noindent
-    % --- MIDDLE COLUMN (INFO) ---
+    % --- LEFT COLUMN (INFO) ---
     \begin{minipage}[c]{0.85\textwidth}
         \centering
         
         % NAME - Two color option:
-        {\fontsize{32pt}{1em}\bfseries\color{gray}Your} {\fontsize{32pt}{1em}\bfseries\color{darkgray}Name}\\[0.5em]
+        {\fontsize{32pt}{1em}\bfseries\color{gray}Muhsin} {\fontsize{32pt}{1em}\bfseries\color{darkgray}Kompas}\\[0.5em]
         % Single color option (uncomment below and comment above):
         % {\fontsize{32pt}{1em}\bfseries\color{darkgray} #1} \\[0.5em]
         
@@ -329,14 +329,14 @@
 
 % Option 2: WITH photo (side-by-side layout)
 \makeheaderwithphoto
-    {Your Name}                             % Name
-    {Your Professional Title}               % Title
-    {City, Country}                         % Address
+    {Muhsin Kompas}                         % Name
+    {MSc Computer Engineer · R\&D Software Engineer}               % Title
+    {Istanbul, Turkey}                      % Address
     {+1 234 567 8900}                       % Phone
     {your.email@example.com}                % Email
-    {yourwebsite.com}                       % Website (without https://)
-    {your-github}                           % GitHub username
-    {your-linkedin}                         % LinkedIn username
+    {muhsinkompas.com}                      % Website (without https://)
+    {muhsinkompas}                          % GitHub username
+    {muhsin-kompas}                         % LinkedIn username
     {profile.jpeg}                          % Photo path (place your photo in same folder)
 
 %------------------------------------------------------------------------------
